// newsletter__newsletters/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.newsletters;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Resultsitem {
}

message Paginatednewsletterlist {

  int64 count = 1;
  int64 page = 2;
  int64 pages = 3;
  int64 page_size = 4;
  bool has_next = 5;
  bool has_previous = 6;
  optional int64 next_page = 7;
  optional int64 previous_page = 8;
  repeated Resultsitem results = 9;
}

message Newsletter {

  int64 id = 1;
  string title = 2;
  optional string description = 3;
  optional bool is_active = 4;
  optional bool auto_subscribe = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  int64 subscribers_count = 8;
}